--- a/test-containers/HelmChartTestWeb.Tests/.env.sample
+++ b/test-containers/HelmChartTestWeb.Tests/.env.sample
@@ -3,6 +3,6 @@ DB_SERVER_PORT=1533
 DB_CONTAINER_NAME=mssql-server
 DB_NAME=aspnet-HelmChartTestWeb
 DB_USERNAME=sa
-DB_PASSWORD=JAsdfi7125o1ih2rt1
+DB_PASSWORD=JAsdfi7125o1ih2rt1_@
 DB_TRUSTED_CONNECTION=true
 DB_MULTIPLE_ACTIVE_RESULT_SETS=true
