--- a/test-containers/HelmChartTestWeb.Tests/HelmChartTestWeb.Tests.csproj
+++ b/test-containers/HelmChartTestWeb.Tests/HelmChartTestWeb.Tests.csproj
@@ -8,10 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNet.Testcontainers" Version="1.5.0" />
     <PackageReference Include="Ductus.FluentDocker" Version="2.10.44" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="Npgsql" Version="6.0.3" />
+    <PackageReference Include="Testcontainers" Version="2.1.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
