Make a few changes to make simultaneous integration test running possible.

--- a/test-containers/HelmChartTestWeb.Tests/.env.test-container
+++ b/test-containers/HelmChartTestWeb.Tests/.env.test-container
@@ -1,9 +1,9 @@
-﻿DOCKER_ENGINE_HOST=127.0.0.1
-DOCKER_ENGINE_PORT=1234
-DB_SERVER_PORT=1234
+﻿DOCKER_ENGINE_HOST=10.254.7.46
+DOCKER_ENGINE_PORT=2375
+DB_SERVER_PORT=3247
 DB_CONTAINER_BASE_NAME=mssql-server
 DB_NAME=aspnet-HelmChartTestWeb
 DB_USERNAME=sa
-DB_PASSWORD=JAsdfi7125o1ih2rt1
+DB_PASSWORD=JAsdfi7125o1ih2rt1_@
 DB_TRUSTED_CONNECTION=true
 DB_MULTIPLE_ACTIVE_RESULT_SETS=true
