--- a/test-containers/HelmChartTestWeb.Tests/HelmChartTestWeb.Tests.csproj
+++ b/test-containers/HelmChartTestWeb.Tests/HelmChartTestWeb.Tests.csproj
@@ -11,7 +11,7 @@
     <PackageReference Include="Ductus.FluentDocker" Version="2.10.44" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="Npgsql" Version="6.0.3" />
-	<PackageReference Include="Testcontainers" Version="2.2.0-beta.2835065501" />
+    <PackageReference Include="Testcontainers" Version="2.2.0-beta.2835065501" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -29,6 +29,9 @@
 
   <ItemGroup>
     <None Update=".env.sample">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update=".env.test-container">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
